dataset1235/2025-2/2318198438/users/1240871306/executions/2601575092_1964285824.log
== SUBMISSION (2025-09-01 05:11:30)
-- CODE: 
adicao = 6 + 2
subtracao = 20 - 12
multiplicacao = 8 * 1
divisao = 32/4
resto = 26 % 9
potenciacao = 4** 1.5

print("adicao:", adicao)
print("subtracao:", subtracao)
print("multiplicacao:" , multiplicacao)
print("divisao:" , divisao)
print("resto:", resto)
print("potenciacao:" , int(potenciacao))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:03:40)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , int(potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:17:19)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Sultiplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("Divisao:" , Divisao)
                       ^^^^^^^
NameError: name 'Divisao' is not defined. Did you mean: 'divisao'?
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("Divisao:" , Divisao)
                       ^^^^^^^
NameError: name 'Divisao' is not defined. Did you mean: 'divisao'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:16:54)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("adicao:", Adicao)
print("subtracao:", Subtracao)
print("multiplicacao:" , Multiplicacao)
print("divisao:" , Divisao)
print("resto:", Resto)
print("potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("divisao:" , Divisao)
                       ^^^^^^^
NameError: name 'Divisao' is not defined. Did you mean: 'divisao'?
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("divisao:" , Divisao)
                       ^^^^^^^
NameError: name 'Divisao' is not defined. Did you mean: 'divisao'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:48:57)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", ...)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:04:22)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
int(print("potenciação:" , int(potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    int(print("potenciação:" , int(potenciação))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    int(print("potenciação:" , int(potenciação))
       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 04:59:35)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:17:18)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Sultiplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("Divisao:" , Divisao)
                       ^^^^^^^
NameError: name 'Divisao' is not defined. Did you mean: 'divisao'?
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("Divisao:" , Divisao)
                       ^^^^^^^
NameError: name 'Divisao' is not defined. Did you mean: 'divisao'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:04:46)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
(print("potenciação:" , int(potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    (print("potenciação:" , int(potenciação))
    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    (print("potenciação:" , int(potenciação))
    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:04:54)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
(print("potenciação:" , int((potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    (print("potenciação:" , int((potenciação))
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    (print("potenciação:" , int((potenciação))
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:10:55)
-- CODE: 
adicao = 6 + 2
subtracao = 20 - 12
multiplicacao = 8 * 1
divisao = 32/4
resto = 26 % 9
potenciacao = 4** 1.5

print("adicao:", adicao)
print("subtracao:", subtracao)
print("multiplicacao:" , multiplicacao)
print("divisao:" , divisao)
print("resto:", resto)
print("potenciacao:" , potenciacao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:17:27)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Sultiplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:21:12)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Subtracao:" , Subtracao)
print("Multiplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:58:24)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multipliçação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("multiplicação:" , multiplicação)
                             ^^^^^^^^^^^^^
NameError: name 'multiplicação' is not defined. Did you mean: 'multipliçação'?
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("multiplicação:" , multiplicação)
                             ^^^^^^^^^^^^^
NameError: name 'multiplicação' is not defined. Did you mean: 'multipliçação'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 05:11:27)
-- CODE: 
adicao = 6 + 2
subtracao = 20 - 12
multiplicacao = 8 * 1
divisao = 32/4
resto = 26 % 9
potenciacao = 4** 1.5

print("adicao:", adicao)
print("subtracao:", subtracao)
print("multiplicacao:" , multiplicacao)
print("divisao:" , divisao)
print("resto:", resto)
print("potenciacao:" , int(potenciacao))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:58:23)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multipliçação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("multiplicação:" , multiplicação)
                             ^^^^^^^^^^^^^
NameError: name 'multiplicação' is not defined. Did you mean: 'multipliçação'?
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("multiplicação:" , multiplicação)
                             ^^^^^^^^^^^^^
NameError: name 'multiplicação' is not defined. Did you mean: 'multipliçação'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:04:27)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
int(print("potenciação:" , (potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    int(print("potenciação:" , (potenciação))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    int(print("potenciação:" , (potenciação))
       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:04:28)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
int(print("potenciação:" , (potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    int(print("potenciação:" , (potenciação))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    int(print("potenciação:" , (potenciação))
       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 05:17:28)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Sultiplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:05:33)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
(print("potenciação:" , (potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    (print("potenciação:" , (potenciação))
    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    (print("potenciação:" , (potenciação))
    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:07:10)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
printi("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    printi("potenciação:" , potenciação)
    ^^^^^^
NameError: name 'printi' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    printi("potenciação:" , potenciação)
    ^^^^^^
NameError: name 'printi' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 05:16:51)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("adicao:", Adicao)
print("subtracao:", Subtracao)
print("multiplicacao:" , Multiplicacao)
print("divisao:" , Divisao)
print("resto:", Resto)
print("potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("divisao:" , Divisao)
                       ^^^^^^^
NameError: name 'Divisao' is not defined. Did you mean: 'divisao'?
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("divisao:" , Divisao)
                       ^^^^^^^
NameError: name 'Divisao' is not defined. Did you mean: 'divisao'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:21:46)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Subtracao:" , Subtracao)
print("Multiplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciacao:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 05:03:44)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , int(potenciação))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:59:33)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 05:10:51)
-- CODE: 
adicao = 6 + 2
subtracao = 20 - 12
multiplicacao = 8 * 1
divisao = 32/4
resto = 26 % 9
potenciacao = 4** 1.5

print("adicao:", adicao)
print("subtracao:", subtracao)
print("multiplicacao:" , multiplicacao)
print("divisao:" , divisao)
print("resto:", resto)
print("potenciacao:" , potenciacao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:21:35)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Subtracao:" , Subtracao)
print("Multiplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:10:47)
-- CODE: 
adicao = 6 + 2
subtracao = 20 - 12
multiplicacao = 8 * 1
divisao = 32/4
resto = 26 % 9
potenciacao = 4** 1.5

print("adicao:", adicao)
print("subtracao:", subtracao)
print("multiplicacao:" , multiplicacao)
print("divisao:" , divisao)
print("resto:", resto)
print("potenciacao:" , potenciacao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:05:18)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , int((potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    print("potenciação:" , int((potenciação))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    print("potenciação:" , int((potenciação))
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:16:50)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("adicao:", Adicao)
print("subtracao:", Subtracao)
print("multiplicacao:" , Multiplicacao)
print("divisao:" , Divisao)
print("resto:", Resto)
print("potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("divisao:" , Divisao)
                       ^^^^^^^
NameError: name 'Divisao' is not defined. Did you mean: 'divisao'?
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("divisao:" , Divisao)
                       ^^^^^^^
NameError: name 'Divisao' is not defined. Did you mean: 'divisao'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:07:11)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
printi("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    printi("potenciação:" , potenciação)
    ^^^^^^
NameError: name 'printi' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    printi("potenciação:" , potenciação)
    ^^^^^^
NameError: name 'printi' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:20:34)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Subtracao:" , Subtracao)
print("Multplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:03:43)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , int(potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:17:34)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Sultiplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:04:29)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
int(print("potenciação:" , (potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    int(print("potenciação:" , (potenciação))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    int(print("potenciação:" , (potenciação))
       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:20:05)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Sultiplicacao:" , Subtracao)
print("Multplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:04:45)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
(print("potenciação:" , int(potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    (print("potenciação:" , int(potenciação))
    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    (print("potenciação:" , int(potenciação))
    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:20:00)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Sultiplicacao:" , Subtracao)
print("Multplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:58:44)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:07:26)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:43:51)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", ...)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 05:20:02)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Sultiplicacao:" , Subtracao)
print("Multplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:11:26)
-- CODE: 
adicao = 6 + 2
subtracao = 20 - 12
multiplicacao = 8 * 1
divisao = 32/4
resto = 26 % 9
potenciacao = 4** 1.5

print("adicao:", adicao)
print("subtracao:", subtracao)
print("multiplicacao:" , multiplicacao)
print("divisao:" , divisao)
print("resto:", resto)
print("potenciacao:" , int(potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:13:00)
-- CODE: 
adicao = 6 + 2
subtracao = 20 - 12
multiplicacao = 8 * 1
divisao = 32/4
resto = 26 % 9
potenciacao = 4** 1.5

print("adicao:", adicao)
print("subtracao:", subtracao)
print("multiplicacao:" , multiplicacao)
print("divisao:" , divisao)
print("resto:", resto)
print("potenciacao:" , int(potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:59:38)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:11:33)
-- CODE: 
adicao = 6 + 2
subtracao = 20 - 12
multiplicacao = 8 * 1
divisao = 32/4
resto = 26 % 9
potenciacao = 4** 1.5

print("adicao:", adicao)
print("subtracao:", subtracao)
print("multiplicacao:" , multiplicacao)
print("divisao:" , divisao)
print("resto:", resto)
print("potenciacao:" , int(potenciacao))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciacao: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 05:21:14)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Subtracao:" , Subtracao)
print("Multiplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciaco:" , int(Potenciacao))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciaco: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 04:56:53)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:03:47)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , int(potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:04:02)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , int(potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:05:17)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , int((potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    print("potenciação:" , int((potenciação))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    print("potenciação:" , int((potenciação))
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:04:55)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
(print("potenciação:" , int((potenciação))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    (print("potenciação:" , int((potenciação))
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 13
    (print("potenciação:" , int((potenciação))
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:57:02)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:06:54)
-- CODE: 
soma = 6 + 2
subtraçao = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtraçao:", subtração)
print("multiplicaçao:" , multiplicação)
print("divisao:" , divisão)
print("resto:", resto)
print("potenciaçao:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("subtraçao:", subtração)
                        ^^^^^^^^^
NameError: name 'subtração' is not defined. Did you mean: 'subtraçao'?
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("subtraçao:", subtração)
                        ^^^^^^^^^
NameError: name 'subtração' is not defined. Did you mean: 'subtraçao'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 05:05:44)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 05:21:48)
-- CODE: 
Adicao = 6 + 2
Subtracao = 20 - 12
Multiplicacao = 8 * 1
Divisao = 32/4
Resto = 26 % 9
Potenciacao = 4** 1.5

print("Adicao:", Adicao)
print("Subtracao:" , Subtracao)
print("Multiplicacao:" , Multiplicacao)
print("Divisao:" , Divisao)
print("Resto:", Resto)
print("Potenciacao:" , int(Potenciacao))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao: 8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao: 8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:56:47)
-- CODE: 
soma = 6 + 2
subtração = 20 - 12
multiplicação = 8 * 1
divisão = 32/4
resto = 26 % 9
potenciação = 4** 1.5

print("soma:", soma)
print("subtração:", subtração)
print("multiplicação:" , multiplicação)
print("divisão:" , divisão)
print("resto:", resto)
print("potenciação:" , potenciação)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
potenciação: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
